# c-language-learning

./: .gitignore  CMakeLists.txt  arg-calc.c  arg.c  ascii-case.c  atof.c  calc-operators-etc.txt  for.c  geany.txt  numbers.c  numbers_utils.h  swap-trick.c
